<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_container_route_plan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    android:clickable="true"
    android:paddingBottom="8dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_title_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/from"
                        android:textColor="@color/colorAlternateGreen"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="8dp"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_from_location"

                        style="@style/MaterialEditText"

                        android:drawableLeft="@drawable/ic_location_on_green_500_18dp"
                        android:drawableStart="@drawable/ic_location_on_green_500_18dp"
                        android:hint="@string/hint_location"
                        app:met_hideUnderline="true"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAlternateGreen"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_from_address"

                        style="@style/MaterialEditText"

                        android:layout_below="@id/et_from_location"
                        android:drawableLeft="@drawable/ic_home_green_500_18dp"
                        android:drawableStart="@drawable/ic_home_green_500_18dp"
                        android:hint="@string/hint_address"
                        app:met_clearButton="true"
                        app:met_hideUnderline="true"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAlternateGreen"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_note_from"

                        style="@style/MaterialEditText"

                        android:layout_below="@id/et_from_address"
                        android:drawableLeft="@drawable/ic_insert_comment_green_500_18dp"
                        android:drawableStart="@drawable/ic_insert_comment_green_500_18dp"
                        android:hint="@string/hint_info"
                        app:met_clearButton="true"
                        app:met_hideUnderline="true"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/colorAlternateGreen"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"


                android:layout_below="@+id/cv_from"
                android:layout_margin="8dp"

                app:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_title_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/to"
                        android:textColor="@color/red_500"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="8dp"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_to_location"

                        style="@style/MaterialEditText"

                        android:layout_below="@id/tv_title_to"
                        android:drawableLeft="@drawable/ic_location_on_red_500_18dp"
                        android:drawableStart="@drawable/ic_location_on_red_500_18dp"
                        android:hint="@string/hint_location"
                        app:met_hideUnderline="true"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/red_500"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_to_address"

                        style="@style/MaterialEditText"

                        android:layout_below="@id/et_to_location"
                        android:drawableLeft="@drawable/ic_home_red_500_18dp"
                        android:drawableStart="@drawable/ic_home_red_500_18dp"
                        android:hint="@string/hint_address"
                        app:met_clearButton="true"
                        app:met_hideUnderline="true"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/red_500"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_note_to"

                        style="@style/MaterialEditText"

                        android:layout_below="@id/et_to_address"
                        android:drawableLeft="@drawable/ic_insert_comment_red_500_18dp"
                        android:drawableStart="@drawable/ic_insert_comment_red_500_18dp"
                        android:hint="@string/hint_info"
                        app:met_clearButton="true"
                        app:met_hideUnderline="true"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/red_500"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </ScrollView>

        <Button
            android:id="@+id/btn_route_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_effect_color_primary"
            android:text="@string/button_route_plan_next"
            android:textColor="@color/white"
            android:textSize="18sp">
        </Button>

</RelativeLayout>